--- a/src/pages/modal-nova-localizacao/modal-nova-localizacao.html
+++ b/src/pages/modal-nova-localizacao/modal-nova-localizacao.html
@@ -11,7 +11,7 @@
  
  <ion-content>
      <input (focus)="clearTo()" id="enderecoBuscado" name="enderecoBuscado" type="text"  class="controls"
-    placeholder="Enter location" [(ngModel)]="enderecoBuscado">
+    placeholder="Informe a localização" [(ngModel)]="enderecoBuscado"/>
  </ion-content>
 <ion-content>
   
