--- a/src/pages/modal-photo/modal-photo.html
+++ b/src/pages/modal-photo/modal-photo.html
@@ -5,7 +5,7 @@
 <ion-card padding-bottom> 
   <ion-item large (click)="selecionarFotoGaleria()" > 
         <ion-avatar item-left>
-            <img src="img/img18.png" />
+            <img src="../../assets/img/img18.png" />
             </ion-avatar>
             <div class="card-subtitle">Selecionar foto da galeria</div>
   </ion-item>
@@ -15,7 +15,7 @@
 
   <ion-item (click)="selecionarFotoTirada()" > 
         <ion-avatar item-left>
-            <img src="img/img19.png" />
+            <img src="../../assets/img/img19.png" />
             </ion-avatar>
             <div class="card-subtitle">Tirar foto</div>
   </ion-item>
